--- a/app.json
+++ b/app.json
@@ -5,10 +5,10 @@
   "logo": "https://graph.org/file/b7e8484f6395a180b6380.jpg",
   "repository": "https://github.com/MrMKN/Simple-Rename-Bot",
   "env": {
-    "API_ID": {"description": "Get this value from https://my.telegram.org", "required": true},
-    "API_HASH": {"description": "Get this value from https://my.telegram.org", "required": true},                              
-    "BOT_TOKEN": {"description": "Your bot token. Get this value from https://t.me/BotFather", "required": true},
-    "ADMIN": {"description": "your telegram id. because this bot repo is admin only", "required": true},
+    "API_ID": {"description": "Get this value from https://my.telegram.org", "required": false},
+    "API_HASH": {"description": "Get this value from https://my.telegram.org", "required": false},                              
+    "BOT_TOKEN": {"description": "Your bot token. Get this value from https://t.me/BotFather", "required": false},
+    "ADMIN": {"description": "your telegram id. because this bot repo is admin only", "required": false},
     "CAPTION": {"description": "your permanent caption. Keyword's 👉 {file_name} = file name add in caption {file_size} = file size add in caption", "value": "{file_name}\n\n💽 Size = {file_size}\n\n📯Join My Channel : @mkn_bots_updates", "required": false}                         
   }, 
   "addons": [ ],
